# learning-opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
build-mac/: CMakeCache.txt  Makefile  app  cmake_install.cmake  compile_commands.json  grpc_app
build-mac/grpc/: Makefile  cmake_install.cmake
build-mac/grpc/proto/: gl_server.grpc.pb.cc  gl_server.grpc.pb.h  gl_server.pb.cc  gl_server.pb.h
clouds/: bunny.pcd
ext/: pointsLoader.hpp
grpc/: CMakeLists.txt  data.proto  grpc_conv.hh  grpc_listener.cc  grpc_listener.hh
grpc/proto/: gl_server.proto  points.proto
include/: camera.hh  entity.hh  inputProcessor.hh  renderer.hh  shaderLoader.hh  vertexBufferLayout.hh  vertexObject.hh
include/entities/: Line.hh  Points.hh
include/entity/: axis.hh  factory.hh  line.hh  points.hh
include/layouts/: lineAttribute.hpp
lib/: camera.cc  camera.h  camera.hh  entity.hh  entity.hpp  inputProcessor.cc  inputProcessor.cpp  inputProcessor.h  inputProcessor.hh  renderer.cc  renderer.hh  renderer.hpp  shaderLoader.hh  shaderLoader.hpp  shaderProgram.cc  shaderProgram.hh  shaderProgram.hpp  vertexBuffer.h  vertexBufferLayout.h  vertexObject.h
lib/entities/: Axis.hh  Line.hh  Line.hpp  Points.hh
lib/entity/: factory.cc
lib/layouts/: pointAttribute.hpp
shaders/: fragment.glsl  line-vert.glsl  line_vertex.glsl  point-frag.glsl  point-vert.glsl  vertex.glsl
src/: app.cc  grid.cc  grid.hh  grpc_app.cc  grpc_conv.cc  grpc_conv.hh  main.cpp
test/client/: .gitignore  client.py  readme.md  requirements.txt  setup.sh
